image src's are corrected

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MMR | Home</title>
     <!-- fevicon.io -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/Logos/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/Logos/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/Logos/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/images/Logos/favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/Logos/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/Logos/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/Logos/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="./images/Logos/favicon_io/site.webmanifest">
     <link rel="stylesheet" href="./style.css">
     <!-- CSS  Flickity Carousel | Carousel plugin-->
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
@@ -33,59 +33,59 @@
             <h2>Bonafide Certificates</h2>
             <!-- Flickity HTML init -->
             <div class="carousel" data-flickity='{ "wrapAround": true }'>
-                <div class="carousel-cell"><img src="/images/My Documents/Pri_Sch_Bonafide.jpeg" alt="Pri_Bonafide"></div>
-                <div class="carousel-cell"><img src="/images/My Documents/Sec_Sch_Bonafide.jpeg" alt="Sec_Bonafide"></div>
-                <div class="carousel-cell"><img src="/images/My Documents/Diploma_Bonafide.jpeg" alt="Dip_Bonafide"></div>
+                <div class="carousel-cell"><img src="./images/My Documents/Pri_Sch_Bonafide.jpeg" alt="Pri_Bonafide"></div>
+                <div class="carousel-cell"><img src="./images/My Documents/Sec_Sch_Bonafide.jpeg" alt="Sec_Bonafide"></div>
+                <div class="carousel-cell"><img src="./images/My Documents/Diploma_Bonafide.jpeg" alt="Dip_Bonafide"></div>
             </div>
         </section>
         <section class="PCs">
             <h2>Provisional Certificates</h2>
             <!-- Flickity HTML init -->
             <div class="carousel" data-flickity='{ "wrapAround": true }'>
-                <div class="carousel-cell"><img src="/images/My Documents/SSC_Memo.jpeg" alt="SSC"></div>
-                <div class="carousel-cell"><img src="/images/My Documents/Diploma_PC.jpeg" alt="Diploma"></div>
-                <div class="carousel-cell"><img src="/images/My Documents/BTech_PC.jpeg" alt="BTech"></div>
-                <div class="carousel-cell"><img src="/images/My Documents/BTech_marks_memo1.jpeg" alt="BTech Marks Memo"></div>
-                <div class="carousel-cell"><img src="/images/My Documents/ECIL_Certificate.jpeg" alt="ECIL Trainee"></div>
-                <div class="carousel-cell"><img src="/images/My Documents/Best_Urdu_Student_Award.jpeg" alt="Award"></div>
+                <div class="carousel-cell"><img src="./images/My Documents/SSC_Memo.jpeg" alt="SSC"></div>
+                <div class="carousel-cell"><img src="./images/My Documents/Diploma_PC.jpeg" alt="Diploma"></div>
+                <div class="carousel-cell"><img src="./images/My Documents/BTech_PC.jpeg" alt="BTech"></div>
+                <div class="carousel-cell"><img src="./images/My Documents/BTech_marks_memo1.jpeg" alt="BTech Marks Memo"></div>
+                <div class="carousel-cell"><img src="./images/My Documents/ECIL_Certificate.jpeg" alt="ECIL Trainee"></div>
+                <div class="carousel-cell"><img src="./images/My Documents/Best_Urdu_Student_Award.jpeg" alt="Award"></div>
             </div>
         </section>
         <section class="memos">
             <h2>Memo of Marks, Grades & Credits</h2>
             <!-- Flickity HTML init -->
             <div class="carousel" data-flickity='{ "wrapAround": true }'>
-                <div class="carousel-cell"><img src="/images/Memos/diploma_1stYear.jpeg" alt="D1"></div>
-                <div class="carousel-cell"><img src="/images/Memos/diploma_2-1.jpeg" alt="D2-1"></div>
-                <div class="carousel-cell"><img src="/images/Memos/diploma_2-2.jpeg" alt="D2-2"></div>
-                <div class="carousel-cell"><img src="/images/Memos/BTech_2-1.jpeg" alt="B2-1"></div>
-                <div class="carousel-cell"><img src="/images/Memos/BTech_2-2Reg.jpeg" alt="B2-2R"></div>
-                <div class="carousel-cell"><img src="/images/Memos/BTech_2-2Sup.jpeg" alt="B2-2S"></div>
-                <div class="carousel-cell"><img src="/images/Memos/BTech_3-1Reg.jpeg" alt="B3-1R"></div>
-                <div class="carousel-cell"><img src="/images/Memos/BTech_3-1Sup.jpeg" alt="B3-1S"></div>
-                <div class="carousel-cell"><img src="/images/Memos/BTech_3-2Reg.jpeg" alt="B3-2R"></div>
-                <div class="carousel-cell"><img src="/images/Memos/BTech_3-2Sup.jpeg" alt="B3-2S"></div>
-                <div class="carousel-cell"><img src="/images/Memos/BTech_4-1Reg.jpeg" alt="B4-1R"></div>
-                <div class="carousel-cell"><img src="/images/Memos/BTech_4-1Sup.jpeg" alt="B4-1S"></div>
-                <div class="carousel-cell"><img src="/images/Memos/BTech_4-2Reg.jpeg" alt="B4-2"></div>
+                <div class="carousel-cell"><img src="./images/Memos/diploma_1stYear.jpeg" alt="D1"></div>
+                <div class="carousel-cell"><img src="./images/Memos/diploma_2-1.jpeg" alt="D2-1"></div>
+                <div class="carousel-cell"><img src="./images/Memos/diploma_2-2.jpeg" alt="D2-2"></div>
+                <div class="carousel-cell"><img src="./images/Memos/BTech_2-1.jpeg" alt="B2-1"></div>
+                <div class="carousel-cell"><img src="./images/Memos/BTech_2-2Reg.jpeg" alt="B2-2R"></div>
+                <div class="carousel-cell"><img src="./images/Memos/BTech_2-2Sup.jpeg" alt="B2-2S"></div>
+                <div class="carousel-cell"><img src="./images/Memos/BTech_3-1Reg.jpeg" alt="B3-1R"></div>
+                <div class="carousel-cell"><img src="./images/Memos/BTech_3-1Sup.jpeg" alt="B3-1S"></div>
+                <div class="carousel-cell"><img src="./images/Memos/BTech_3-2Reg.jpeg" alt="B3-2R"></div>
+                <div class="carousel-cell"><img src="./images/Memos/BTech_3-2Sup.jpeg" alt="B3-2S"></div>
+                <div class="carousel-cell"><img src="./images/Memos/BTech_4-1Reg.jpeg" alt="B4-1R"></div>
+                <div class="carousel-cell"><img src="./images/Memos/BTech_4-1Sup.jpeg" alt="B4-1S"></div>
+                <div class="carousel-cell"><img src="./images/Memos/BTech_4-2Reg.jpeg" alt="B4-2"></div>
             </div>
         </section>
         <section class="IDs">
             <h2>Personal ID Cards</h2>
             <!-- Flickity HTML init -->
             <div class="carousel" data-flickity='{ "wrapAround": true }'>
-                <div class="carousel-cell"><img src="/images/My Documents/AadharCard.jpeg" alt="Aadhar"></div>
-                <div class="carousel-cell"><img src="/images/My Documents/VoterIdCard.jpeg" alt="VoterID"></div>
-                <div class="carousel-cell"><img src="/images/My Documents/PAN.jpeg" alt="PAN"></div>
-                <div class="carousel-cell"><img src="/images/My Documents/license.jpeg" alt="License"></div>
-                <div class="carousel-cell"><img src="/images/My Documents/ATM.jpeg" alt="ATM"></div>
+                <div class="carousel-cell"><img src=".images/My Documents/AadharCard.jpeg" alt="Aadhar"></div>
+                <div class="carousel-cell"><img src="./images/My Documents/VoterIdCard.jpeg" alt="VoterID"></div>
+                <div class="carousel-cell"><img src="./images/My Documents/PAN.jpeg" alt="PAN"></div>
+                <div class="carousel-cell"><img src="./images/My Documents/license.jpeg" alt="License"></div>
+                <div class="carousel-cell"><img src="./images/My Documents/ATM.jpeg" alt="ATM"></div>
             </div>
         </section>
         <section class="proofs">
             <h2>Other Certificates</h2>
             <!-- Flickity HTML init -->
             <div class="carousel" data-flickity='{ "wrapAround": true }'>
-                <div class="carousel-cell"><img class="cast-res" src="/images/My Documents/Caste_Certificate.jpeg" alt="caste"></div>
-                <div class="carousel-cell"><img class="cast-res" src="/images/My Documents/Residence.jpeg" alt="Residence"></div>
+                <div class="carousel-cell"><img class="cast-res" src="./images/My Documents/Caste_Certificate.jpeg" alt="caste"></div>
+                <div class="carousel-cell"><img class="cast-res" src="./images/My Documents/Residence.jpeg" alt="Residence"></div>
             </div>
         </section>
         <section>
@@ -101,12 +101,12 @@
         </section>
         <div class="founder">
             <h2>Our Founder</h2>
-            <img src="/images/My Photos/Mintu6.jpeg" class="profile-pic" alt="Minnathullah">
+            <img src="./images/My Photos/Mintu6.jpeg" class="profile-pic" alt="Minnathullah">
             <b>Mohammed Minnathullah Rahmani</b>
             <div class="social-media">
-                <a href="https://www.instagram.com/mystery_minnat_556/" target="_main"><img src="/images/Logos/instagram.jpeg" alt="instagram"></a>
-                <a href="https://www.facebook.com/profile.php?id=100082452596728" target="_main"><img src="/images/Logos/facebook1.jpeg" alt="facebook"></a>
-                <a href="https://www.linkedin.com/in/minnathullah-mohammed-06885b263/" target="_main"><img src="/images/Logos/linkedIn-logo.png" alt="linkedin"></a>
+                <a href="https://www.instagram.com/mystery_minnat_556/" target="_main"><img src="./images/Logos/instagram.jpeg" alt="instagram"></a>
+                <a href="https://www.facebook.com/profile.php?id=100082452596728" target="_main"><img src="./images/Logos/facebook1.jpeg" alt="facebook"></a>
+                <a href="https://www.linkedin.com/in/minnathullah-mohammed-06885b263/" target="_main"><img src="./images/Logos/linkedIn-logo.png" alt="linkedin"></a>
             </div>
             <p>
                 I'm currently working as a research assistant in a small lab studying memory in relation to different protein receptors. Most recently, we designed and developed a test of the effect of a new chemical on UTC-1 receptors of rats, the results of which were published in Scientific American in July.I became interested in neuroscience and specifically the science of memory in my undergraduate studies and continued on as a graduate student at UNC. I was really excited to see this role open up at ABC Inc. because the labwork and SOPs match up perfectly with my experience, and the research you're working on is at the forefront of the field, which is right where I want to be.
